--- a/style.css
+++ b/style.css
@@ -5,3 +5,10 @@
 h1{
     color: red;
 }
+h2{
+    color: tomato;
+    text-align: center;
+    margin: 30px auto;
+    border: 2px solid black;
+    width: 350px;
+}
