--- a/style.css
+++ b/style.css
@@ -2,13 +2,64 @@
     padding: 0px;
     margin: 0px;
 }
-h1{
-    color: red;
+header{
+    background-image: url(img/header-img.jpg);
+    height:100vh;
+    background-size: cover;
+    background-position: 200px center center center;
+    background-repeat: no-repeat;
 }
-h2{
-    color: tomato;
+header .div-text{
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    left:0px;
+    top:160px;
+    position: relative;
+    padding: 0px 40px;
+}
+header .div-text h2{
     text-align: center;
-    margin: 30px auto;
-    border: 2px solid black;
-    width: 350px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    font-style: italic;
+}
+header> .div-text h2 .text-design{
+    text-shadow: 1px 2px 3px red;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+/* section code-start div one- 01 */
+.one-pent{
+    width:1100px;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    text-align: center;
+    padding:80px 0px 100px 0px;
+}
+.one-pent .one{
+    border-top:3px solid rgba(255, 0, 0, 0.411);
+    border-left: 3px solid rgba(102, 51, 153, 0.5);
+    padding:10px 18px;
+    width: 300px;
+    border-radius:9px;
+    box-shadow: 5px 6px 6px black;
+    background-color: rgba(255, 210, 155, 0.582);
+}
+.one-pent .one h3{
+    padding:8px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(71, 120, 255, 0.774);
+    font-style: italic;
+    font-family:monospace;
+    font-size: 20px;
+
+}
+.one-pent .one  p{
+    line-height:24px;
+    text-transform:capitalize;
+    font-size: 17px;
+    color: rgba(0, 0, 0, 0.719);
+    text-align: justify;
 }
