--- a/style.css
+++ b/style.css
@@ -63,3 +63,35 @@ header> .div-text h2 .text-design{
     color: rgba(0, 0, 0, 0.719);
     text-align: justify;
 }
+
+/*2 from section code start  */
+.form-div{
+    width: 800px;
+    border: 1px solid red;
+    margin: 20px auto;
+    padding: 20px 10px;
+    text-align: center;
+}
+.form-div h1{
+    margin: 10px 0px 30px 0px;
+    color: rgba(0, 0, 0, 0.726);
+    text-shadow: 2px 2px 1px rgba(142, 40, 243, 0.795);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 35px;
+}
+.form-div .form-one{
+    font-size: 20px;
+    border: 1px solid;
+
+}
+.form-div .form-one input{
+    width: 200px;
+    height: 20px;
+}
+
+.boton{
+    background-color: rebeccapurple;
+    display:inline-block;
+    width: 10px;
+    height: 20px;
+}
